--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -22,24 +22,24 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
-    - name: Cache pip
-      uses: actions/cache@v1
-      with:
-        path: ~/.cache/pip # This path is specific to Ubuntu
-        # Look to see if there is a cache hit for the corresponding requirements file
-        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-          ${{ runner.os }}-
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+#    - name: Cache pip
+#      uses: actions/cache@v1
+#      with:
+#        path: ~/.cache/pip # This path is specific to Ubuntu
+#        # Look to see if there is a cache hit for the corresponding requirements file
+#        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+#        restore-keys: |
+#          ${{ runner.os }}-pip-
+#          ${{ runner.os }}-
+#
+#    - name: Install dependencies
+#      run: |
+#        python -m pip install --upgrade pip
+#        pip install -r requirements.txt
 
     # Runs a single command using the runners shell
     - name: GitHub Action for pytest
       uses: cclauss/GitHub-Action-for-pytest@0.5.0
       with:
-        args: pip3 install -r requirements.txt --user && pippytest
+        args: pip install -r requirements.txt && pytest
 
