--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -6,7 +6,7 @@ name: Run all python tests
 on:
   push:
     branches: [ master ]
-  pull_request:
+  pull_request_target:
     branches: [ master, change-to-post ]
 
 jobs:
