--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -5,9 +5,9 @@ name: Run all python tests
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, change-to-post ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, change-to-post ]
 
 jobs:
   build:
@@ -35,5 +35,7 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
+      env:
+        ONCOKB_API_TOKEN: ${{ secrets.ONCOKB_BOT_API_TOKEN }}
       run: |
         pytest
