--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,5 +1,5 @@
-name-template: 'v$NEXT_PATCH_VERSION'
-tag-template: 'v$NEXT_PATCH_VERSION'
+name-template: 'v$NEXT_MINOR_VERSION'
+tag-template: 'v$NEXT_MINOR_VERSION'
 categories:
   - title: '🧬 Features'
     labels:
@@ -31,4 +31,4 @@ template: |
   ## Changes
   $CHANGES
   ## 🕵️‍♀️ Full commit logs
-  - https://github.com/oncokb/oncokb/compare/$PREVIOUS_TAG...v$NEXT_PATCH_VERSION
+  - https://github.com/oncokb/oncokb/compare/$PREVIOUS_TAG...v$NEXT_MINOR_VERSION
