Separate dependencies for python 2.7 and 3 & Add test for 2.7

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -11,12 +11,11 @@ on:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [3.7, 3.8]
-
+        os: [ubuntu-latest, macos-latest]
+        python-version: [2.7, 3.7, 3.8]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -24,10 +23,50 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
+      env:
+        PYTHON_VERSION: ${{ matrix.python-version }}
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [[ $PYTHON_VERSION =~ ^2\.[0-9]$ ]]; then pip install -r requirements/common.txt -r requirements/pip2.7.txt; fi
+        if [[ $PYTHON_VERSION =~ ^3\.[0-9]$ ]]; then pip install -r requirements/common.txt -r requirements/pip3.txt; fi
+    - name: Lint with flake8
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Test with pytest
+      env:
+        ONCOKB_API_TOKEN: ${{ secrets.ONCOKB_BOT_API_TOKEN }}
+      run: |
+        pytest
+
+  build-in-windows:
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        python-version: [2.7, 3.7, 3.8]
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      env:
+        PYTHON_VERSION: ${{ matrix.python-version }}
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pytest
+        if ( $env:PYTHON_VERSION -match '^2\.[0-9]$' )
+        {
+          pip install -r requirements/common.txt -r requirements/pip2.7.txt
+        }
+        if ( $env:PYTHON_VERSION -match '^3\.[0-9]$' )
+        {
+          pip install -r requirements/common.txt -r requirements/pip3.txt
+        }
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
