Update example script  format following ShellCheck

--- a/.github/workflows/compare-study-annotation.yml
+++ b/.github/workflows/compare-study-annotation.yml
@@ -36,40 +36,40 @@ jobs:
           git checkout -b compare
 
           STUDY=msk_impact_2017
-          DATAHUB_URL=https://media.githubusercontent.com/media/cBioPortal/datahub/42afc279efb8d9104aba36fa35bad3ec41921949/public/$STUDY
+          DATAHUB_URL=https://media.githubusercontent.com/media/cBioPortal/datahub/42afc279efb8d9104aba36fa35bad3ec41921949/public/"$STUDY"
 
           MUTATION_DATA_NAME=data_mutations_extended.txt
           CLINICAL_DATA_NAME=data_clinical_sample.txt
           FUSION_DATA_NAME=data_fusions.txt
           CNA_DATA_NAME=data_CNA.txt
 
-          cd data
-          curl -s $DATAHUB_URL/$MUTATION_DATA_NAME -O
-          curl -s $DATAHUB_URL/$CLINICAL_DATA_NAME -O
-          curl -s $DATAHUB_URL/$FUSION_DATA_NAME -O
-          curl -s $DATAHUB_URL/$CNA_DATA_NAME -O
+          cd data || exit
+          curl -s "$DATAHUB_URL"/"$MUTATION_DATA_NAME" -O
+          curl -s "$DATAHUB_URL"/"$CLINICAL_DATA_NAME" -O
+          curl -s "$DATAHUB_URL"/"$FUSION_DATA_NAME" -O
+          curl -s "$DATAHUB_URL"/"$CNA_DATA_NAME" -O
           cd ..
 
           # create compare folder to add all annotated files
           mkdir compare
 
           PREFIX=oncokb
-          IMAF=data/$MUTATION_DATA_NAME
-          OMAF=compare/"$PREFIX"_$MUTATION_DATA_NAME
+          IMAF=data/"$MUTATION_DATA_NAME"
+          OMAF=compare/"$PREFIX"_"$MUTATION_DATA_NAME"
 
-          IC=data/$CLINICAL_DATA_NAME
-          OC=compare/"$PREFIX"_$CLINICAL_DATA_NAME
+          IC=data/"$CLINICAL_DATA_NAME"
+          OC=compare/"$PREFIX"_"$CLINICAL_DATA_NAME"
 
-          IF=data/$FUSION_DATA_NAME
-          OF=compare/"$PREFIX"_$FUSION_DATA_NAME
+          IF=data/"$FUSION_DATA_NAME"
+          OF=compare/"$PREFIX"_"$FUSION_DATA_NAME"
 
-          ICNA=data/$CNA_DATA_NAME
-          OCNA=compare/"$PREFIX"_$CNA_DATA_NAME
+          ICNA=data/"$CNA_DATA_NAME"
+          OCNA=compare/"$PREFIX"_"$CNA_DATA_NAME"
 
-          python MafAnnotator.py -i $IMAF -o $OMAF -c $IC -b $ONCOKB_API_TOKEN
-          python FusionAnnotator.py -i $IF -o $OF -c $IC -b $ONCOKB_API_TOKEN
-          python CnaAnnotator.py -i $ICNA -o $OCNA -c $IC -b $ONCOKB_API_TOKEN
-          python ClinicalDataAnnotator.py -i $IC -o $OC -a $OMAF,$OCNA,$OF
+          python MafAnnotator.py -i "$IMAF" -o "$OMAF" -c "$IC" -b "$ONCOKB_API_TOKEN"
+          python FusionAnnotator.py -i "$IF" -o "$OF" -c "$IC" -b "$ONCOKB_API_TOKEN"
+          python CnaAnnotator.py -i "$ICNA" -o "$OCNA" -c "$IC" -b "$ONCOKB_API_TOKEN"
+          python ClinicalDataAnnotator.py -i "$IC" -o "$OC" -a "$OMAF,$OCNA,$OF"
 
           git config user.name oncokb-bot
           git config user.email dev.oncokb@gmail.com
@@ -89,7 +89,7 @@ jobs:
           # remove everything under compare folder and replace wiht the ones from oncokb-data
           rm -f compare/*.txt
 
-          cd compare
+          cd compare || exit
           curl -s -H "Authorization: token ${ONCOKB_OAUTH_TOKEN}" https://api.github.com/repos/knowledgesystems/oncokb-data/contents/annotation/$STUDY | jq -r '.[] | .download_url + " " + .name' | while IFS=' ' read -r downloadurl name; do
             if [[ "$name" == "$FIEL_NAME_PREFIX"* ]]; then
               curl -s "$downloadurl" -o $name
