--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -31,8 +31,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
-        python-version: [2.7, 3.7, 3.8]
+        os: [ ubuntu-latest, macos-latest ]
+        python-version: [ 2.7, 3.7, 3.8, 3.9, 3.10, 3.11 ]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -45,8 +45,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pytest
-        if [[ $PYTHON_VERSION =~ ^2\.[0-9]$ ]]; then pip install -r requirements/common.txt -r requirements/pip2.7.txt; fi
-        if [[ $PYTHON_VERSION =~ ^3\.[0-9]$ ]]; then pip install -r requirements/common.txt -r requirements/pip3.txt; fi
+        if [[ $PYTHON_VERSION =~ ^2\.[0-9]+$ ]]; then pip install -r requirements/common.txt -r requirements/pip2.7.txt; fi
+        if [[ $PYTHON_VERSION =~ ^3\.[0-9]+$ ]]; then pip install -r requirements/common.txt -r requirements/pip3.txt; fi
     - name: Test with pytest
       env:
         ONCOKB_API_TOKEN: ${{ secrets.ONCOKB_BOT_API_TOKEN }}
@@ -57,7 +57,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        python-version: [2.7, 3.7, 3.8]
+        python-version: [ 2.7, 3.7, 3.8, 3.9, 3.10, 3.11 ]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
