--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -32,7 +32,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, macos-latest ]
-        python-version: [ 2.7, 3.7, 3.8, 3.9, 3.10, 3.11 ]
+        python-version: [ '2.7','3.7','3.8','3.9','3.10','3.11' ]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -54,10 +54,11 @@ jobs:
         pytest
 
   build-in-windows:
+    needs: lint
     runs-on: windows-latest
     strategy:
       matrix:
-        python-version: [ 2.7, 3.7, 3.8, 3.9, 3.10, 3.11 ]
+        python-version: [ '2.7','3.7','3.8','3.9','3.10','3.11' ]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
