--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -71,11 +71,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pytest
-        if ( $env:PYTHON_VERSION -match '^2\.[0-9]$' )
+        if ( $env:PYTHON_VERSION -match '^2\.[0-9]+$' )
         {
           pip install -r requirements/common.txt -r requirements/pip2.7.txt
         }
-        if ( $env:PYTHON_VERSION -match '^3\.[0-9]$' )
+        if ( $env:PYTHON_VERSION -match '^3\.[0-9]+$' )
         {
           pip install -r requirements/common.txt -r requirements/pip3.txt
         }
