--- a/.github/workflows/compare-annotation.yml
+++ b/.github/workflows/compare-annotation.yml
@@ -46,6 +46,7 @@ jobs:
           INDIVIDUAL_CNA_DATA_NAME=data_individual_CNA.txt
 
           cd data || exit
+          echo "${ONCOKB_OAUTH_TOKEN:0:3}********"
           curl -s -H "Authorization: token ${ONCOKB_OAUTH_TOKEN}" https://api.github.com/repos/knowledgesystems/oncokb-data/contents/annotation/annotator-test/data | jq -r '.[] | .download_url + " " + .name' | while IFS=' ' read -r downloadurl name; do
             if [[ "$name" == "$FIEL_NAME_PREFIX"* ]]; then
               curl -s "$downloadurl" -o $name
