--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -32,11 +32,11 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, macos-latest ]
-        python-version: [ '3.7','3.8','3.9','3.10','3.11' ]
+        python-version: [ '3.8','3.9','3.10','3.11' ]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
@@ -58,11 +58,11 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        python-version: [ '3.7','3.8','3.9','3.10','3.11' ]
+        python-version: [ '3.8','3.9','3.10','3.11' ]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
